--- a/sections/PCB.tex
+++ b/sections/PCB.tex
@@ -41,5 +41,5 @@ Se colocaron puntos se prueba para poder medir tensiones en distintos puntos de 
 
 Se colocaron jumpers en serie con cada componente o lugar
 en el que se desea medir corriente para contrastar con los resultados obtenidos por simulación.
-Para realizar las mediciones, se reemplazaron los jumpers por cables,
+Posteriormente los mismos fueron reemplazados por cables
 para poder utilizar las puntas de corriente del osciloscopio.
