--- a/sections/apendice.tex
+++ b/sections/apendice.tex
@@ -17,7 +17,7 @@
 \begin{figure}[hbt]
     \centering
     \includegraphics[width=\linewidth]{images/sim-full-1.png}
-    \caption{Circuito simulado en LTspice. Se separa cada bloque con línea punteada. Se muestra el recitificador de entrada, el conversor DC-DC y parte del circuito de control.}
+    \caption{Circuito simulado en LTspice. Se separa cada bloque con línea punteada. Se muestra el recitificador de entrada, el convertidor DC-DC y parte del circuito de control.}
     \label{fig:sim-full-1}
 \end{figure}
 
