--- a/sections/diseño.tex
+++ b/sections/diseño.tex
@@ -123,7 +123,6 @@ Potencia aparente:
 
 $$ P_t=P_o+P_i=P_o\times\left(1+\frac{1}{n}\right)=25.86W  $$
 
-% Estoy buscando una decente
 %INSERTAR IMÁGEN B-H DE KIKE!
 \begin{figure}[ht]
     \centering
@@ -155,7 +154,7 @@ Por lo tanto, el número de vueltas del bobinado secundario es igual al del prim
 
 $$ N_{2}=25 $$
 
-A partir de la tabla X, para el núcleo tipo E $ K_{j}=366$ , $x=-0.14$ y $Pfe=Pcu$. 
+A partir de la tabla \ref{tabla:Kj}, para el núcleo tipo E: $ K_{j}=366$ , $x=-0.14$ y $Pfe=Pcu$. 
 
 Tomando el factor de relleno $K_u=0.4$:
 
@@ -408,7 +407,7 @@ La tensión directa máxima se obtiene de la hoja de datos:
 
 $$ V_{dc_2}=1.7V $$
 
-El ciclo de trabajo máximo está definido por el conversor forward, 
+El ciclo de trabajo máximo está definido por el convertidor forward, 
 
 $$ D_{max}=0.5 $$
 
