--- a/sections/resumen.tex
+++ b/sections/resumen.tex
@@ -6,8 +6,11 @@
     describiendo las decisiones tomadas durante la etapa de diseño, 
     los problemas afrontados y las respectivas soluciones propuestas.
 
-    El cargador está diseñado para ser utilizado con baterías de litio cuya corriente de carga varíe desde 1A hasta 6.7A.
-    La fuente de alimentación puede ser de 110V o 220VAC. 
+    El cargador está diseñado para ser utilizado con baterías de litio de 36V.
+    Se alimenta de una tensión de 110 a 240V de corriente alterna, a 50 o 60Hz.
+    Presenta siete modos de carga para baterías de 2.2Ah a 13.2Ah, seleccionables por el usuario, que regulan la intensidad de corriente de salida desde 1A hasta 6.7A.
+    Su potencia máxima es de 282W.
+
     Se utilizó una topología forward doble switch para la etapa de conversión DC-DC
     y un circuito integrado para la etapa de control.
 
